@@ -1,37 +1,25 @@
 package dsd.api.cdmsa.service;
 
-import dsd.api.cdmsa.dto.CreateCommentRequest;
-import dsd.api.cdmsa.model.Comment;
+import dsd.api.cdmsa.dto.*;
+import dsd.api.cdmsa.model.*;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
+import dsd.api.cdmsa.repository.*;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import dsd.api.cdmsa.dto.AlternativeResponse;
-import dsd.api.cdmsa.dto.CommentResponse;
-import dsd.api.cdmsa.dto.CloseRfcRequest;
-import dsd.api.cdmsa.dto.CreateAlternativeRequest;
-import dsd.api.cdmsa.dto.CreateRfcRequest;
-import dsd.api.cdmsa.dto.RfcResponse;
 import dsd.api.cdmsa.exception.RfcAlternativeBadRequestException;
 import dsd.api.cdmsa.exception.RfcAlternativeNotAllowedException;
 import dsd.api.cdmsa.exception.RfcBadRequestException;
 import dsd.api.cdmsa.exception.RfcDependencyNotFoundException;
 import dsd.api.cdmsa.exception.RfcInvalidStatusException;
 import dsd.api.cdmsa.exception.RfcNotFoundException;
-import dsd.api.cdmsa.model.ADR;
-import dsd.api.cdmsa.model.Alternative;
-import dsd.api.cdmsa.model.RFC;
-import dsd.api.cdmsa.repository.AlternativeRepository;
-import dsd.api.cdmsa.repository.CommentRepository;
-import dsd.api.cdmsa.repository.OrganizationRepository;
-import dsd.api.cdmsa.repository.RfcRepository;
-import dsd.api.cdmsa.repository.TemplateRepository;
-import dsd.api.cdmsa.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -39,63 +27,57 @@ import lombok.RequiredArgsConstructor;
 public class RfcService {
     // Existing repositories
     private final RfcRepository rfcRepository;
+    private final AdrRepository adrRepository;
     private final UserRepository userRepository;
     private final TemplateRepository templateRepository;
     private final OrganizationRepository organizationRepository;
     private final AlternativeRepository alternativeRepository;
     private final CommentRepository commentRepository;
-
-    private final AdrService adrService;
+    private final VoteRepository voteRepository;
 
     @Transactional
     public RfcResponse postCommentToRfc(Long rfcId, Long userId, CreateCommentRequest request) {
-        // in the future we should check that the user must be a reviewer of the RFC in order to post a comment
+        // in the future we should check that the user must be a reviewer of the RFC in
+        // order to post a comment
         // ...
 
         RFC rfc = rfcRepository.findById(rfcId)
-                .orElseThrow(() -> new RuntimeException("RFC not found"));
+                .orElseThrow(() -> new RfcNotFoundException("RFC not found"));
+
+        if (rfc.getStatus() != RFC.Status.UNDER_REVIEW) {
+            throw new RfcBadRequestException("Comments are not allowed on closed RFCs");
+        }
+
+        User author = userRepository.findById(userId)
+                .orElseThrow(() -> new RfcNotFoundException("User not found"));
 
         Comment comment = new Comment();
-        comment.setAuthor(userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found")));
+        comment.setAuthor(author);
         comment.setContent(request.content().trim());
         comment.setRfc(rfc);
 
-        rfc.getComments().add(comment);
-        rfcRepository.save(rfc);        // saved also in the table comments thanks to cascade all
+        // IF parentId is not null, add a parent-child relationship
+        if (request.parentId() != null) {
+            Comment parent = commentRepository.findById(request.parentId())
+                    .orElseThrow(() -> new RfcNotFoundException("Parent comment not found"));
 
-    List<CommentResponse> commentResponses = rfc.getComments().stream()
-        .map(c -> new CommentResponse(
-            c.getId(),
-            c.getAuthor() != null ? c.getAuthor().getId() : null,
-            c.getAuthor() != null ? c.getAuthor().getUsername() : null,
-            c.getContent(),
-            c.getCreatedAt(),
-            c.getUpdatedAt()
-        ))
-        .toList();
+            // Validación extra: el parent debe pertenecer al mismo RFC
+            if (!parent.getRfc().getId().equals(rfcId)) {
+                throw new RfcBadRequestException("Reply comment must belong to the same RFC");
+            }
 
-    // Build full RfcResponse using the record constructor arguments order
-    return new RfcResponse(
-        rfc.getId(),
-        rfc.getTitle(),
-        rfc.getDescription(),
-        rfc.getUser() != null ? rfc.getUser().getId() : null,
-        rfc.getUser() != null ? rfc.getUser().getName() : null,
-        rfc.getTemplate() != null ? rfc.getTemplate().getId() : null,
-        rfc.getOrg() != null ? rfc.getOrg().getId() : null,
-        rfc.getStatus(),
-        rfc.getCreatedAt(),
-        rfc.getUpdatedAt(),
-        java.util.List.of(), // alternatives (lightweight here)
-        commentResponses
-    );
+            comment.setParent(parent);
+        }
+
+        commentRepository.save(comment);
+
+        return getRfcById(rfcId);
     }
 
     // ---------- US-12: Create RFC ----------
 
     @Transactional
-    public RfcResponse createRfc(Long userId, CreateRfcRequest request) {
+    public RfcResponse createRfc(Long userId, Long orgId, CreateRfcRequest request) {
 
         // Validate request body
         if (request == null) {
@@ -110,9 +92,6 @@ public class RfcService {
         if (request.templateId() == null) {
             throw new RfcBadRequestException("TemplateId is required");
         }
-        if (request.orgId() == null) {
-            throw new RfcBadRequestException("OrgId is required");
-        }
 
         // Validate related entities
         var user = userRepository.findById(userId)
@@ -121,7 +100,7 @@ public class RfcService {
         var template = templateRepository.findById(request.templateId())
                 .orElseThrow(() -> new RfcDependencyNotFoundException("Template not found"));
 
-        var org = organizationRepository.findById(request.orgId())
+        var org = organizationRepository.findById(orgId)
                 .orElseThrow(() -> new RfcDependencyNotFoundException("Organization not found"));
 
         // Build RFC entity
@@ -144,76 +123,125 @@ public class RfcService {
                 .map(this::toResponse);
     }
 
+    /**
+     * Returns a paginated list of RFCs that belong to the specified organization.
+     * This is the org-scoped variant used by controllers to ensure users only
+     * see RFCs belonging to their organization.
+     */
+    @Transactional(readOnly = true)
+    public Page<RfcResponse> listRfcsByOrg(Long orgId, Pageable pageable) {
+        return rfcRepository.findByOrgId(orgId, pageable)
+                .map(this::toResponse);
+    }
+
     @Transactional(readOnly = true)
     public RfcResponse getRfcById(Long rfcId) {
         RFC rfc = rfcRepository.findById(rfcId)
                 .orElseThrow(() -> new RfcNotFoundException("RFC not found with id " + rfcId));
-    return toDetailedResponse(rfc);
+        return toDetailedResponse(rfc);
+    }
+
+    /**
+     * Returns a RFC only if it belongs to the given organization. Used to
+     * ensure organization-scoped access to RFC details.
+     */
+    @Transactional(readOnly = true)
+    public RfcSpecificResponse getRfcByIdForOrg(Long rfcId, Long orgId, Long userId) {
+        RFC rfc = rfcRepository.findByIdAndOrgId(rfcId, orgId)
+                .orElseThrow(() -> new RfcNotFoundException("RFC not found with id " + rfcId));
+        RfcResponse detailedRfc = toDetailedResponse(rfc);
+        // Determine if the requesting user is the author of the RFC
+        boolean isAuthor = rfc.getUser().getId().equals(userId);
+        return new RfcSpecificResponse(
+            rfc.getId(),
+            rfc.getTitle(),
+            rfc.getDescription(),
+            rfc.getUser() != null ? rfc.getUser().getId() : null,
+            rfc.getUser() != null ? rfc.getUser().getFirstname() : null, //Before getName
+            rfc.getTemplate() != null ? rfc.getTemplate().getId() : null,
+            rfc.getOrg() != null ? rfc.getOrg().getId() : null,
+            rfc.getStatus(),
+            rfc.getCreatedAt(),
+            rfc.getUpdatedAt(),
+            isAuthor,
+            detailedRfc.alternatives(),
+            detailedRfc.comments());
     }
 
     private RfcResponse toResponse(RFC rfc) {
-    return new RfcResponse(
-        rfc.getId(),
-        rfc.getTitle(),
-        rfc.getDescription(),
-        rfc.getUser() != null ? rfc.getUser().getId() : null,
-        rfc.getUser() != null ? rfc.getUser().getName() : null,
-        rfc.getTemplate() != null ? rfc.getTemplate().getId() : null,
-        rfc.getOrg() != null ? rfc.getOrg().getId() : null,
-        rfc.getStatus(),
-        rfc.getCreatedAt(),
-        rfc.getUpdatedAt(),
-        java.util.List.of(), // lightweight list for summary
-        java.util.List.of());
+        // Compute comment count (may load comments; acceptable for page sizes)
+        int count = commentRepository.findByRfcId(rfc.getId()).size();
+        return new RfcResponse(
+                rfc.getId(),
+                rfc.getTitle(),
+                rfc.getDescription(),
+                rfc.getUser() != null ? rfc.getUser().getId() : null,
+                rfc.getUser() != null ? rfc.getUser().getFirstname() : null, //Before getName
+                rfc.getTemplate() != null ? rfc.getTemplate().getId() : null,
+                rfc.getOrg() != null ? rfc.getOrg().getId() : null,
+                rfc.getStatus(),
+                rfc.getCreatedAt(),
+                rfc.getUpdatedAt(),
+                (long) count,
+                java.util.List.of(), // lightweight list for summary
+                java.util.List.of());
     }
 
     private RfcResponse toDetailedResponse(RFC rfc) {
-    List<AlternativeResponse> alts = alternativeRepository.findByRfcId(rfc.getId()).stream()
-        .map(AlternativeResponse::fromEntity)
-        .collect(Collectors.toList());
 
-    List<CommentResponse> comments = commentRepository.findByRfcId(rfc.getId()).stream()
-        .map(c -> new CommentResponse(
-            c.getId(),
-            c.getAuthor() != null ? c.getAuthor().getId() : null,
-            c.getAuthor() != null ? c.getAuthor().getUsername() : null,
-            c.getContent(),
-            c.getCreatedAt(),
-            c.getUpdatedAt()
-        ))
-        .collect(Collectors.toList());
+        List<AlternativeResponse> alts = alternativeRepository.findByRfcId(rfc.getId()).stream()
+                .map(alt -> {
+                    int yesCount = voteRepository.countByAlternativeAndOutcome(alt, true);
+                    int noCount = voteRepository.countByAlternativeAndOutcome(alt, false);
+                    return AlternativeResponse.fromEntityVotes(alt, yesCount, noCount);
+                })
+                .collect(Collectors.toList());
 
-    return new RfcResponse(
-        rfc.getId(),
-        rfc.getTitle(),
-        rfc.getDescription(),
-        rfc.getUser() != null ? rfc.getUser().getId() : null,
-        rfc.getUser() != null ? rfc.getUser().getName() : null,
-        rfc.getTemplate() != null ? rfc.getTemplate().getId() : null,
-        rfc.getOrg() != null ? rfc.getOrg().getId() : null,
-        rfc.getStatus(),
-        rfc.getCreatedAt(),
-        rfc.getUpdatedAt(),
-        alts,
-        comments);
+        List<Comment> comments = commentRepository.findByRfcId(rfc.getId());
+
+        // Map: parentId → children list
+        Map<Long, List<Comment>> childrenMap = comments.stream()
+                .filter(c -> c.getParent() != null)
+                .collect(Collectors.groupingBy(c -> c.getParent().getId()));
+
+        // Comments without parent (root comments)
+        List<Comment> roots = comments.stream()
+                .filter(c -> c.getParent() == null)
+                .toList();
+
+        // Transform it into a thread
+        List<CommentResponse> threaded = roots.stream()
+                .map(root -> buildThreaded(root, childrenMap))
+                .toList();
+
+        return new RfcResponse(
+                rfc.getId(),
+                rfc.getTitle(),
+                rfc.getDescription(),
+                rfc.getUser() != null ? rfc.getUser().getId() : null,
+                rfc.getUser() != null ? rfc.getUser().getFirstname() : null, // Before getName
+                rfc.getTemplate() != null ? rfc.getTemplate().getId() : null,
+                rfc.getOrg() != null ? rfc.getOrg().getId() : null,
+                rfc.getStatus(),
+                rfc.getCreatedAt(),
+            rfc.getUpdatedAt(),
+            (long) comments.size(),
+            alts,
+            threaded);
+    }
+
+    private CommentResponse buildThreaded(Comment comment, Map<Long, List<Comment>> childrenMap) {
+
+        List<CommentResponse> replies = childrenMap.getOrDefault(comment.getId(), List.of())
+                .stream()
+                .map(child -> buildThreaded(child, childrenMap))
+                .toList();
+
+        return CommentResponse.fromEntity(comment, replies);
     }
 
     // ---------- Alternatives (POST & GET) ----------
 
-    /**
-     * Creates a new alternative for a given RFC.
-     *
-     * Rules:
-     * - RFC must exist.
-     * - RFC must be in UNDER_REVIEW status.
-     * - Only the RFC author is allowed to create alternatives.
-     * - title and description are required.
-     *
-     * @param rfcId   ID of the target RFC
-     * @param userId  ID of the current user (author candidate)
-     * @param request Alternative creation payload
-     * @return AlternativeResponse DTO
-     */
     @Transactional
     public AlternativeResponse addAlternative(Long rfcId, Long userId, CreateAlternativeRequest request) {
 
@@ -263,12 +291,6 @@ public class RfcService {
         return AlternativeResponse.fromEntity(saved);
     }
 
-    /**
-     * Returns all alternatives for a given RFC.
-     *
-     * @param rfcId ID of the RFC
-     * @return List of AlternativeResponse
-     */
     @Transactional(readOnly = true)
     public List<AlternativeResponse> listAlternatives(Long rfcId) {
 
@@ -278,8 +300,29 @@ public class RfcService {
         }
 
         return alternativeRepository.findByRfcId(rfcId).stream()
-                .map(AlternativeResponse::fromEntity)
-                .toList();
+                .map(alt -> {
+                    int yesCount = voteRepository.countByAlternativeAndOutcome(alt, true);
+                    int noCount = voteRepository.countByAlternativeAndOutcome(alt, false);
+                    return AlternativeResponse.fromEntityVotes(alt, yesCount, noCount);
+                })
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * List alternatives but only if the RFC belongs to the given organization.
+     */
+    @Transactional(readOnly = true)
+    public List<AlternativeResponse> listAlternativesForOrg(Long rfcId, Long orgId) {
+        if (!rfcRepository.existsByIdAndOrgId(rfcId, orgId)) {
+            throw new RfcNotFoundException("RFC not found with id " + rfcId);
+        }
+        return alternativeRepository.findByRfcId(rfcId).stream()
+                .map(alt -> {
+                    int yesCount = voteRepository.countByAlternativeAndOutcome(alt, true);
+                    int noCount = voteRepository.countByAlternativeAndOutcome(alt, false);
+                    return AlternativeResponse.fromEntityVotes(alt, yesCount, noCount);
+                })
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -307,20 +350,63 @@ public class RfcService {
 
             rfc.setStatus(RFC.Status.CLOSED_DECIDED);
             // Link winning alternative
-            // rfc.setWinningAlternative(winningAlt); // si tienes este campo
+            // rfc.setWinningAlternative(winningAlt); maybe cool to have?
 
-            // Create ADR draft (using AdrService)
-            // ADR adr = adrService.createDraftFromRfcAndAlternative(rfc, winningAlt);
-            // rfc.setAdr(adr);
+            ADR adr = adrRepository.findByRfcId(rfcId)
+                    .orElseThrow(() -> new RfcNotFoundException("ADR not found for this RFC"));
+
+            rfc.setAdr(adr);
         }
         // Case 2: closed without alternative (US-23)
         else {
             rfc.setStatus(RFC.Status.CLOSED_NON_DECIDED);
-            // Puedes guardar el motivo de cierre si tu modelo lo soporta
+
         }
 
         RFC saved = rfcRepository.save(rfc);
         return toResponse(saved);
+    }
+
+    @Transactional
+    public VoteResponse voteForAlternative(Long altId, Long userId, boolean outcome) {
+        Alternative alternative = alternativeRepository.findById(altId)
+                .orElseThrow(() -> new EntityNotFoundException("Alternative not found"));
+
+        User voter = userRepository.findById(userId)
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+
+        Optional<Vote> existing = voteRepository.findByAlternativeAndVoter(alternative, voter);
+
+        if (existing.isPresent()) {
+            Vote vote = existing.get();
+
+            // delete vote if u click on the same thumb
+            if (vote.getOutcome() != null && vote.getOutcome().equals(outcome)) {
+                voteRepository.delete(vote);
+                int yesCount = voteRepository.countByAlternativeAndOutcome(alternative, true);
+                int noCount = voteRepository.countByAlternativeAndOutcome(alternative, false);
+
+                return new VoteResponse(yesCount, noCount);
+            }
+
+            // change vote instead
+            vote.setOutcome(outcome);
+            voteRepository.save(vote);
+            int yesCount = voteRepository.countByAlternativeAndOutcome(alternative, true);
+            int noCount = voteRepository.countByAlternativeAndOutcome(alternative, false);
+
+            return new VoteResponse(yesCount, noCount);
+        }
+
+        // no existing vote
+        Vote newVote = new Vote();
+        newVote.setAlternative(alternative);
+        newVote.setVoter(voter);
+        newVote.setOutcome(outcome);
+        voteRepository.save(newVote);
+        int yesCount = voteRepository.countByAlternativeAndOutcome(alternative, true);
+        int noCount = voteRepository.countByAlternativeAndOutcome(alternative, false);
+        return new VoteResponse(yesCount, noCount);
     }
 
 }
